Updated the project to use SASS instead of pure CSS and configured SASS autocompiler ( LigerShark.WebOptimizer.Sass ) running at compile-time..

--- a/Foody.Web/Foody.Web.csproj
+++ b/Foody.Web/Foody.Web.csproj
@@ -6,6 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="LigerShark.WebOptimizer.Core" Version="1.0.236" />
+    <PackageReference Include="LigerShark.WebOptimizer.Sass" Version="1.0.34-beta" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.9" />
